# Matching

./: .gitmodules  CMakeLists.txt  Main.cpp  README.md  main.cpp  read_matrix_market.cpp  run_cpu_potoff.sh  table.py
bench/: README.md  bench.h  bmark.cpp  mybenchmark
dockerfiles/: benchmarking.docker
graphs/RMAT/: gen500K2.sh  run_cpu_potoff.sh  run_schwing.txt  test.sh
graphs/dimacs/: downfiles.sh  download_all.txt  run_cpu.txt
graphs/dimacs/2DDynSims/: run_cpu.txt
graphs/dimacs/citations/: run_cpu.txt
graphs/dimacs/delauney/: run_cpu.txt
graphs/dimacs/kron/: run_cpu.txt
graphs/dimacs/rgg/: run_cpu.txt
graphs/dimacs/streets/: run_cpu.txt
graphs/regular_random/: README.md  plot2.py  regular_graph.cpp  run_cpu_potoff.sh  run_schwing.txt  test.sh
graphs/regular_random_fast/: regular_graph.cpp
src/: Blossom.h  DSU.h  DSU2.h  Edge.h  FileReader.h  Frontier.h  FrontierPool.h  Graph.h  Matcher.h  SPMC_Config.h  Stack.h  State.h  Statistics.h  ThreadFactory.h  TraversalPolicy.h  Vertex.h  graph.h
